# wayland-greeter

./: CMakeLists.txt  README.md  main-wrapper.cpp  main.cpp
